--- a/_publications/2024-02-17-Enhance.md
+++ b/_publications/2024-02-17-Enhance.md
@@ -1,12 +1,12 @@
 ---
-title: "Paper Title Number 4"
+title: "Enhancing Pre-Trained Language Models for Vulnerability Detection via Semantic-Preserving Data Augmentation"
 collection: publications
 category: conferences
-permalink: /publication/2024-02-17-paper-title-number-4
+# permalink: /publication/2024-02-17-Enhance
 excerpt: 'This paper is about fixing template issue #693.'
-date: 2024-02-17
+date: 2024-10-25
 venue: 'GitHub Journal of Bugs'
-paperurl: 'http://academicpages.github.io/files/paper3.pdf'
+# paperurl: 'http://academicpages.github.io/files/paper3.pdf'
 citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
